[package]
name = "telex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = "4.0.32"
rustyline = "10.0.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
